--- a/hyprland.conf
+++ b/hyprland.conf
@@ -51,7 +51,8 @@ monitor = DP-1, 1920x1080, 1920x0, 1
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec-once = waybar & hyprpaper & swaync & nextcloud & hypridle
 # exec-once = waybar & hyprpaper & swaync & nextcloud & cryptomator
-exec-once = uwsm app -- waybar & uwsm app -- hyprpaper & uwsm app -- swaync
+# exec-once = uwsm app -- waybar & uwsm app -- hyprpaper & uwsm app -- swaync
+exec-once = uwsm app -- hyprpaper & uwsm app -- swaync
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
