--- a/hyprland.conf
+++ b/hyprland.conf
@@ -52,7 +52,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec-once = waybar & hyprpaper & swaync & nextcloud & hypridle
 # exec-once = waybar & hyprpaper & swaync & nextcloud & cryptomator
 # exec-once = uwsm app -- waybar & uwsm app -- hyprpaper & uwsm app -- swaync
-exec-once = uwsm app -- hyprpaper & uwsm app -- swaync
+exec-once = uwsm app -- hyprpaper & uwsm app -- swaync & uwsm app -- swayosd-server
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
