use swayosd for displaying volume change

--- a/bindings.conf
+++ b/bindings.conf
@@ -104,12 +104,26 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+# bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+# Volume raise with custom value
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume 2
+# Volume lower with custom value
+bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume -2
+bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+# bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 # bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 # bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 # bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
+# bindl =, XF86AudioMute, exec, pamixer -t && dunstify -h string:x-dunst-stack-tag:audio "Volume: " -h int:value:"`pamixer --get-volume`"
+# bindel =, XF86AudioRaiseVolume, exec, pamixer -i 2 && dunstify -h string:x-dunst-stack-tag:audio "Volume: " -h int:value:"`pamixer --get-volume-human`"
+# bindel =, XF86AudioLowerVolume, exec, pamixer -d 2 && dunstify -h string:x-dunst-stack-tag:audio "Volume: " -h int:value:"`pamixer --get-volume-human`"
+# bindel =, XF86AudioMute, exec, pamixer -t && dunstify -h string:x-dunst-stack-tag:audio "Volume: " -h int:value:"`pamixer --get-volume-human`"
+
+# bindel =, XF86AudioRaiseVolume, exec, pamixer -i 2
+# bindel =, XF86AudioLowerVolume, exec, pamixer -d 2
+# bindel =, XF86AudioMute, exec, pamixer -t
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
