--- a/bindings.conf
+++ b/bindings.conf
@@ -25,7 +25,6 @@ bindd = $mainMod, X, Exit Hyprland, exec, uwsm stop
 # bind = $mainMod, E, exec, $fileManager
 # bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
 bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
-bind = $mainMod, F, togglefloating,
 # bind = $mainMod, R, exec, $menu
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -75,6 +74,24 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 # bind = $mainMod, mouse_up, workspace, e-1
 bindd = $mainMod CTRL, right, Switch to next workspace, workspace, +1
 bindd = $mainMod CTRL, left, Switch to next workspace, workspace, -1
+
+# Swap active window with the one next to it with $mainMod + SHIFT + arrow keys
+bindd = $mainMod SHIFT, left, Swap window to the left, swapwindow, l
+bindd = $mainMod SHIFT, right, Swap window to the right, swapwindow, r
+bindd = $mainMod SHIFT, up, Swap window up, swapwindow, u
+bindd = $mainMod SHIFT, down, Swap window down, swapwindow, d
+
+# Cycle through applications on active workspace
+bindd = ALT, Tab, Cycle to next window, cyclenext
+bindd = ALT SHIFT, Tab, Cycle to prev window, cyclenext, prev
+bindd = ALT, Tab, Reveal active window on top, bringactivetotop
+bindd = ALT SHIFT, Tab, Reveal active window on top, bringactivetotop
+
+# Control tiling
+bindd = $mainMod, F, Toggle floating, togglefloating,
+bindd = $mainMod, J, Toggle split, togglesplit, # dwindle
+bindd = $mainMod, P, Pseudo window, pseudo, # dwindle
+bindd = SHIFT, F11, Force full screen, fullscreen, 0
 
 # Application shortcuts
 bind = , PRINT, exec, hyprshot -m output
