use bind with description, use $mainMod

--- a/bindings.conf
+++ b/bindings.conf
@@ -99,9 +99,9 @@ bind = SHIFT , PRINT, exec, hyprshot -m region
 
 bindd = $mainMod SHIFT, RETURN, Browser, exec, $browser
 # bind = $mainMod CTRL, RETURN, exec, thunderbird
-bindd = SUPER CTRL, return, Email, exec, uwsm app -- betterbird
+bindd = $mainMod CTRL, return, Email, exec, uwsm app -- betterbird
 
-bindd = SUPER, XF86HomePage, Start Joplin, exec, uwsm app -- joplin-desktop
+bindd = $mainMod, XF86HomePage, Start Joplin, exec, uwsm app -- joplin-desktop
 
 # Switch sound output device
 # bind = CTRL ALT, L, exec, pactl set-default-sink alsa_output.pci-0000_00_1f.3.analog-stereo
@@ -110,15 +110,11 @@ bindd = CTRL ALT, L, Switch audio out to speaker, exec, pactl set-default-sink a
 bindd = CTRL ALT, K, Switch audio out to headphone, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
 
 # cliphist
-bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
-
-# start/restart waybar
-bind = $mainMod SHIFT, B, exec, ~/.config/waybar/launch.sh
-# bind = SUPER SHIFT, R, exec, pkill waybar && hyprctl dispatch exec waybar
+bindd = $mainMod, V, Clipboard history, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+binddm = $mainMod, mouse:272, Move window with LMB, movewindow
+binddm = $mainMod, mouse:273, Resize window with RMB, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
 # bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
