--- a/bindings.conf
+++ b/bindings.conf
@@ -99,7 +99,7 @@ bind = SHIFT , PRINT, exec, hyprshot -m region
 
 bindd = $mainMod SHIFT, RETURN, Browser, exec, $browser
 # bind = $mainMod CTRL, RETURN, exec, thunderbird
-bindd = $mainMod CTRL, return, Email, exec, uwsm app -- betterbird
+bindd = $mainMod CTRL, return, E-Mail, exec, uwsm app -- betterbird
 
 bindd = $mainMod, XF86HomePage, Start Joplin, exec, uwsm app -- joplin-desktop
 
