SUPER+W to close windows

--- a/bindings.conf
+++ b/bindings.conf
@@ -18,7 +18,7 @@ $browser = uwsm app -- firefox
 # bind = $mainMod, Q, exec, $terminal
 bindd = $mainMod, RETURN, Terminal, exec, $terminal
 # bind = $mainMod, C, killactive,
-bindd = $mainMod, Q, Kill, killactive,
+bindd = $mainMod, W, Kill, killactive,
 # bind = $mainMod, M, exit,
 # bindd = $mainMod, X, Exit Hyprland, exit,
 bindd = $mainMod, X, Exit Hyprland, exec, uwsm stop
