more descriptive binds

--- a/bindings.conf
+++ b/bindings.conf
@@ -26,10 +26,10 @@ bindd = $mainMod, X, Exit Hyprland, exec, uwsm stop
 # bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
 bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
 # bind = $mainMod, R, exec, $menu
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, L, exec, uwsm app -- hyprlock
+bindd = $mainMod, SPACE, Launcher, exec, $menu
+bindd = $mainMod, P, Pseudo desktop, pseudo, # dwindle
+bindd = $mainMod, J, Toggle split, togglesplit, # dwindle
+bindd = $mainMod, L, Lock screen, exec, uwsm app -- hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
