--- a/hyprland.conf
+++ b/hyprland.conf
@@ -84,6 +84,7 @@ general {
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # #89b4fa = rgba(137,180,250,1),  #cba6f7 = rgba(203,166,247,1)
     col.active_border = rgba(137,180,250,0.933) rgba(203,166,247,0.933) 45deg
     col.inactive_border = rgba(595959aa)
 
