--- a/bindings.conf
+++ b/bindings.conf
@@ -110,7 +110,8 @@ bindd = CTRL ALT, L, Switch audio out to speaker, exec, pactl set-default-sink a
 bindd = CTRL ALT, K, Switch audio out to headphone, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
 
 # cliphist
-bindd = $mainMod, V, Clipboard history, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+# bindd = $mainMod, V, Clipboard history, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+# bindd = $mainMod, V, CopyQ, exec, copyq toggle
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 binddm = $mainMod, mouse:272, Move window with LMB, movewindow
@@ -143,3 +144,4 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
