--- a/bindings.conf
+++ b/bindings.conf
@@ -21,7 +21,7 @@ bindd = $mainMod, RETURN, Terminal, exec, $terminal
 bindd = $mainMod, W, Kill, killactive,
 # bind = $mainMod, M, exit,
 # bindd = $mainMod, X, Exit Hyprland, exit,
-bindd = $mainMod, X, Exit Hyprland, exec, uwsm stop
+bindd = $mainMod, X, Power Menu, exec, wlogout --margin-bottom 465 --margin-top 465 --margin-left 350 --margin-right 350 --buttons-per-row 5
 # bind = $mainMod, E, exec, $fileManager
 # bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
 bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
