hyprlock clean dark lock screen

--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -34,7 +34,7 @@ general {
 background {
     monitor =
     # path = ~/.config/backgrounds/shaded.png
-    path = /usr/share/backgrounds/archlinux/reflected.jpg
+    path = /usr/share/backgrounds/archlinux/archlinux.stw
     blur_passes = 2
     color = $base
 }
