more binding for $browser, $email, $terminal
added $email

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -13,10 +13,12 @@ $fileManager = uwsm app -- nautilus
 # $menu = uwsm app -- rofi -modes "drun,run" -show drun -run-command 'uwsm app -- {cmd}'
 $menu = uwsm app -- rofi -modes "drun" -show drun -run-command 'uwsm app -- {cmd}'
 $browser = uwsm app -- firefox
+$email = uwsm app -- betterbird
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # bind = $mainMod, Q, exec, $terminal
 bindd = $mainMod, RETURN, Terminal, exec, $terminal
+bindd = $mainMod, T, Terminal, exec, $terminal
 # bind = $mainMod, C, killactive,
 bindd = $mainMod, W, Kill, killactive,
 # bind = $mainMod, M, exit,
@@ -98,8 +100,10 @@ bind = , PRINT, exec, hyprshot -m output
 bind = SHIFT , PRINT, exec, hyprshot -m region
 
 bindd = $mainMod SHIFT, RETURN, Browser, exec, $browser
-# bind = $mainMod CTRL, RETURN, exec, thunderbird
-bindd = $mainMod CTRL, return, E-Mail, exec, uwsm app -- betterbird
+bindd = $mainMod, B, Browser, exec, $browser
+
+bindd = $mainMod CTRL, return, E-Mail, exec, $email
+bindd = $mainMod, M, E-Mail, exec, $email
 
 bindd = $mainMod, XF86HomePage, Start Joplin, exec, uwsm app -- joplin-desktop
 
