start browser, terminal and e-mail at login

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -45,6 +45,9 @@ monitor = DP-1, 1920x1080, 1920x0, 1
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
+exec-once = [workspace 1 silent] uwsm app -- firefox
+exec-once = [workspace 2 silent] uwsm app -- kitty
+exec-once = [workspace 3 silent] uwsm app -- betterbird
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 #exec-once = nm-applet
