minor change - commenting my unneeded window rule for betterbird

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -247,5 +247,6 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 
 # Thunderbird mail compose window floating
 # windowrulev2 = float,class:^(thunderbird)$,initialTitle:^(Verfassen: \(Kein Betreff\))$
+# windowrulev2 = float,class:^(eu.betterbird.Betterbird)$,initialTitle:^(Verfassen: \(Kein Betreff\))$
 
 source = ~/.config/hypr/bindings.conf
