use wleave instead of wlogout

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -23,7 +23,9 @@ bindd = $mainMod, T, Terminal, exec, $terminal
 bindd = $mainMod, W, Kill, killactive,
 # bind = $mainMod, M, exit,
 # bindd = $mainMod, X, Exit Hyprland, exit,
-bindd = $mainMod, X, Power Menu, exec, wlogout --margin-bottom 465 --margin-top 465 --margin-left 350 --margin-right 350 --buttons-per-row 5
+# bindd = $mainMod, X, Power Menu, exec, wlogout --margin-bottom 465 --margin-top 465 --margin-left 350 --margin-right 350 --buttons-per-row 5
+# bindd = $mainMod, X, Power Menu, exec, wleave --margin-bottom 465 --margin-top 465 --margin-left 350 --margin-right 350 --buttons-per-row 5 --show-keybinds --no-version-info
+bindd = $mainMod, X, Power Menu, exec, wleave --show-keybinds --no-version-info
 # bind = $mainMod, E, exec, $fileManager
 # bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
 bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
