special workspace keepassx for keepassxc
keepassxc will autostart and live in it's special workspace

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -48,6 +48,7 @@ monitor = DP-1, 1920x1080, 1920x0, 1
 exec-once = [workspace 1 silent] uwsm app -- firefox
 exec-once = [workspace 2 silent] uwsm app -- kitty
 exec-once = [workspace 3 silent] uwsm app -- betterbird
+exec-once = [workspace special:keepassx silent] keepassxc
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 #exec-once = nm-applet
@@ -244,6 +245,8 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrulev2 = workspace special:keepassx, class:^(org.keepassxc.KeePassXC)$
 
 # Thunderbird mail compose window floating
 # windowrulev2 = float,class:^(thunderbird)$,initialTitle:^(Verfassen: \(Kein Betreff\))$
