--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -70,8 +70,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bindd = $mainMod, S, Togglespecialworkspace, togglespecialworkspace, magic
+bindd = $mainMod SHIFT, S, Movetoworkspace, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 # bind = $mainMod, mouse_down, workspace, e+1
