--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -36,38 +36,38 @@ bindd = $mainMod, J, Toggle split, togglesplit, # dwindle
 bindd = $mainMod, L, Lock screen, exec, uwsm app -- hyprlock
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
+bindd = $mainMod, left, Movefocus left, movefocus, l
 # bind = $mainMod, h, movefocus, l
-bind = $mainMod, right, movefocus, r
+bindd = $mainMod, right, Movefocus right, movefocus, r
 # bind = $mainMod, l, movefocus, r
-bind = $mainMod, up, movefocus, u
+bindd = $mainMod, up, Movefocus up, movefocus, u
 # bind = $mainMod, k, movefocus, u
-bind = $mainMod, down, movefocus, d
+bindd = $mainMod, down, Movefocus down, movefocus, d
 # bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bindd = $mainMod, 1, Workspace 1, workspace, 1
+bindd = $mainMod, 2, Workspace 2, workspace, 2
+bindd = $mainMod, 3, Workspace 3, workspace, 3
+bindd = $mainMod, 4, Workspace 4, workspace, 4
+bindd = $mainMod, 5, Workspace 5, workspace, 5
+bindd = $mainMod, 6, Workspace 6, workspace, 6
+bindd = $mainMod, 7, Workspace 7, workspace, 7
+bindd = $mainMod, 8, Workspace 8, workspace, 8
+bindd = $mainMod, 9, Workspace 9, workspace, 9
+# bindd = $mainMod, 0, Workspace 10, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bindd = $mainMod SHIFT, 1, Movetoworkspace 1, movetoworkspace, 1
+bindd = $mainMod SHIFT, 2, Movetoworkspace 2, movetoworkspace, 2
+bindd = $mainMod SHIFT, 3, Movetoworkspace 3, movetoworkspace, 3
+bindd = $mainMod SHIFT, 4, Movetoworkspace 4, movetoworkspace, 4
+bindd = $mainMod SHIFT, 5, Movetoworkspace 5, movetoworkspace, 5
+bindd = $mainMod SHIFT, 6, Movetoworkspace 6, movetoworkspace, 6
+bindd = $mainMod SHIFT, 7, Movetoworkspace 7, movetoworkspace, 7
+bindd = $mainMod SHIFT, 8, Movetoworkspace 8, movetoworkspace, 8
+bindd = $mainMod SHIFT, 9, Movetoworkspace 9, movetoworkspace, 9
+# bindd = $mainMod SHIFT, 0, Movetoworkspace 1, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bindd = $mainMod, S, Togglespecialworkspace, togglespecialworkspace, magic
@@ -98,8 +98,8 @@ bindd = $mainMod, P, Pseudo window, pseudo, # dwindle
 bindd = SHIFT, F11, Force full screen, fullscreen, 0
 
 # Application shortcuts
-bind = , PRINT, exec, hyprshot -m output
-bind = SHIFT , PRINT, exec, hyprshot -m region
+bindd = , PRINT, Screenshot, exec, hyprshot -m output
+bindd = SHIFT , PRINT, Screenshot region, exec, hyprshot -m region
 
 bindd = $mainMod SHIFT, RETURN, Browser, exec, $browser
 bindd = $mainMod, B, Browser, exec, $browser
@@ -127,10 +127,10 @@ binddm = $mainMod, mouse:273, Resize window with RMB, resizewindow
 # bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 # bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 # Volume raise with custom value
-bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume 2
+binddel = ,XF86AudioRaiseVolume, Volume up, exec, swayosd-client --output-volume 2
 # Volume lower with custom value
-bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume -2
-bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+binddel = ,XF86AudioLowerVolume, Volume down, exec, swayosd-client --output-volume -2
+binddel = ,XF86AudioMute, Volume mute-toggle, exec, swayosd-client --output-volume mute-toggle
 # bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 # bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 # bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
@@ -146,8 +146,9 @@ bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 # bindel =, XF86AudioMute, exec, pamixer -t
 
 # Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+binddl = , XF86AudioNext, Play next song, exec, playerctl next
+binddl = , XF86AudioPause, Pause/Play song, exec, playerctl play-pause
+binddl = , XF86AudioPlay, Pause/Play song, exec, playerctl play-pause
+binddl = , XF86AudioPrev, Play previouos song, exec, playerctl previous
 
+bindd = $mainMod, K, Toggle special workspace keepassx, togglespecialworkspace, keepassx
