XF86AudioNext, XF86AudioPause, XF86AudioPrev, XF86AudioPlay do not work on my punk host (archlinux)

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -146,9 +146,11 @@ binddel = ,XF86AudioMute, Volume mute-toggle, exec, swayosd-client --output-volu
 # bindel =, XF86AudioMute, exec, pamixer -t
 
 # Requires playerctl
-binddl = , XF86AudioNext, Play next song, exec, playerctl next
-binddl = , XF86AudioPause, Pause/Play song, exec, playerctl play-pause
-binddl = , XF86AudioPlay, Pause/Play song, exec, playerctl play-pause
-binddl = , XF86AudioPrev, Play previouos song, exec, playerctl previous
+binddl = , XF86AudioNext, Play next song, exec, mpc next
+binddl = , XF86AudioPause, Pause/Play song, exec, mpc pause
+# binddl = , XF86AudioPlay, Pause/Play song, exec, playerctl play-pause
+binddl = , XF86AudioPlay, Pause/Play song, exec, mpc play
+# binddl = , XF86AudioPrev, Play previouos song, exec, playerctl previous
+binddl = , XF86AudioPrev, Play previouos song, exec, mpc prev
 
 bindd = $mainMod, K, Toggle special workspace keepassx, togglespecialworkspace, keepassx
