running hyprpolkitagent.service now

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -52,7 +52,9 @@ exec-once = [workspace special:keepassx silent] keepassxc
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 #exec-once = nm-applet
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# instead did systemctl --user enable --now hyprpolkitagent.service
+# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+
 # exec-once = waybar & hyprpaper & swaync & nextcloud & hypridle
 # exec-once = waybar & hyprpaper & swaync & nextcloud & cryptomator
 # exec-once = uwsm app -- waybar & uwsm app -- hyprpaper & uwsm app -- swaync
