--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -224,10 +224,11 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+# device {
+#     # name = epic-mouse-v1
+#     name = logitech-usb-receiver-mouse
+#     sensitivity = -0.5
+# }
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
