--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -112,8 +112,10 @@ bindd = $mainMod, XF86HomePage, Start Joplin, exec, uwsm app -- joplin-desktop
 # Switch sound output device
 # bind = CTRL ALT, L, exec, pactl set-default-sink alsa_output.pci-0000_00_1f.3.analog-stereo
 # bind = CTRL ALT, K, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
-bindd = CTRL ALT, L, Switch audio out to speaker, exec, pactl set-default-sink alsa_output.pci-0000_14_00.6.analog-stereo
-bindd = CTRL ALT, K, Switch audio out to headphone, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
+
+# bindd = CTRL ALT, L, Switch audio out to speaker, exec, pactl set-default-sink alsa_output.pci-0000_14_00.6.analog-stereo
+# bindd = CTRL ALT, K, Switch audio out to headphone, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
+bindd = CTRL ALT, L, Switch audio sink, exec, hypr25-switch-audio-sink.sh
 
 # cliphist
 # bindd = $mainMod, V, Clipboard history, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
