--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -109,13 +109,19 @@ bindd = $mainMod, M, E-Mail, exec, $email
 
 bindd = $mainMod, XF86HomePage, Start Joplin, exec, uwsm app -- joplin-desktop
 
+# bindd = $mainMod SHIFT, W, WhatsApp, exec, uwsm app -- firefox --new-window https://web.whatsapp.com
+# bindd = $mainMod SHIFT, W, WhatsApp, exec, uwsm app -- google-chrome-stable --user-data-dir=~/.config/google-chrome/Profile\ 1/ --new-window web.whatsapp.com
+# bindd = $mainMod SHIFT, W, WhatsApp, exec, uwsm app -- firefox --profile ~/.mozilla/firefox/68lq9zlo.whatsapp web.whatsapp.com
+bindd = $mainMod SHIFT, W, WhatsApp, exec, hypr25-whatsapp-app
+bindd = $mainMod SHIFT, G, Signal, exec, uwsm app -- signal-desktop
+
 # Switch sound output device
 # bind = CTRL ALT, L, exec, pactl set-default-sink alsa_output.pci-0000_00_1f.3.analog-stereo
 # bind = CTRL ALT, K, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
 
 # bindd = CTRL ALT, L, Switch audio out to speaker, exec, pactl set-default-sink alsa_output.pci-0000_14_00.6.analog-stereo
 # bindd = CTRL ALT, K, Switch audio out to headphone, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
-bindd = CTRL ALT, L, Switch audio sink, exec, hypr25-switch-audio-sink.sh
+bindd = CTRL ALT, L, Switch audio sink, exec, hypr25-switch-audio-sink
 
 # cliphist
 # bindd = $mainMod, V, Clipboard history, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
