--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -48,11 +48,14 @@ monitor = DP-1, 1920x1080, 1920x0, 1
 exec-once = [workspace 1 silent] uwsm app -- firefox
 exec-once = [workspace 2 silent] uwsm app -- kitty
 exec-once = [workspace 3 silent] uwsm app -- betterbird
+
 exec-once = [workspace special:keepassx silent] keepassxc
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 #exec-once = nm-applet
-# instead did systemctl --user enable --now hyprpolkitagent.service
+
+# If Hyprland is started with uwsm, you can autostart the polkit agent with the command systemctl --user enable --now hyprpolkitagent.service.
+# exec-once = systemctl --user start hyprpolkitagent
 # exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # exec-once = waybar & hyprpaper & swaync & nextcloud & hypridle
