--- a/desktop/hypr25-firefox_whatsapp.desktop
+++ b/desktop/hypr25-firefox_whatsapp.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=WhatsApp
-Comment=WhatsApp
+Comment=WhatsApp Web App
 # Exec=uwsm app -- firefox --profile /home/cs/.mozilla/firefox/68lq9zlo.whatsapp "https://web.whatsapp.com/"
 Exec=hypr25-whatsapp-app
 Terminal=false
