remove old comments
move some env settings to uwsm/env file

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -7,28 +7,18 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Set programs that you use
 $terminal = uwsm app -- kitty
-$fileManager = uwsm app -- nautilus
-# $menu = wofi --show drun
-# $menu = rofi -modes "drun,run" -show drun
-# $menu = uwsm app -- rofi -modes "drun,run" -show drun -run-command 'uwsm app -- {cmd}'
+$fileManager = uwsm app -- nautilus --new-window
 $menu = uwsm app -- rofi -modes "drun" -show drun -run-command 'uwsm app -- {cmd}'
 $browser = uwsm app -- firefox
 $email = uwsm app -- betterbird
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-# bind = $mainMod, Q, exec, $terminal
 bindd = $mainMod, RETURN, Terminal, exec, $terminal
 bindd = $mainMod, T, Terminal, exec, $terminal
-# bind = $mainMod, C, killactive,
 bindd = $mainMod, W, Kill, killactive,
-# bind = $mainMod, M, exit,
-# bindd = $mainMod, X, Exit Hyprland, exit,
-# bindd = $mainMod, X, Power Menu, exec, wlogout --margin-bottom 465 --margin-top 465 --margin-left 350 --margin-right 350 --buttons-per-row 5
 # bindd = $mainMod, X, Power Menu, exec, wleave --margin-bottom 465 --margin-top 465 --margin-left 350 --margin-right 350 --buttons-per-row 5 --show-keybinds --no-version-info
 bindd = $mainMod, X, Power Menu, exec, wleave --show-keybinds --no-version-info
-# bind = $mainMod, E, exec, $fileManager
-# bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
-bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
+bindd = $mainMod, E, File manager, exec, $fileManager
 # bind = $mainMod, R, exec, $menu
 bindd = $mainMod, SPACE, Launcher, exec, $menu
 bindd = $mainMod, P, Pseudo desktop, pseudo, # dwindle
@@ -45,7 +35,7 @@ bindd = $mainMod, up, Movefocus up, movefocus, u
 bindd = $mainMod, down, Movefocus down, movefocus, d
 # bind = $mainMod, j, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+# Switch workspaces with mainMod + [1-9]
 bindd = $mainMod, 1, Workspace 1, workspace, 1
 bindd = $mainMod, 2, Workspace 2, workspace, 2
 bindd = $mainMod, 3, Workspace 3, workspace, 3
@@ -57,7 +47,7 @@ bindd = $mainMod, 8, Workspace 8, workspace, 8
 bindd = $mainMod, 9, Workspace 9, workspace, 9
 # bindd = $mainMod, 0, Workspace 10, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# Move active window to a workspace with mainMod + SHIFT + [1-9]
 bindd = $mainMod SHIFT, 1, Movetoworkspace 1, movetoworkspace, 1
 bindd = $mainMod SHIFT, 2, Movetoworkspace 2, movetoworkspace, 2
 bindd = $mainMod SHIFT, 3, Movetoworkspace 3, movetoworkspace, 3
@@ -70,8 +60,8 @@ bindd = $mainMod SHIFT, 9, Movetoworkspace 9, movetoworkspace, 9
 # bindd = $mainMod SHIFT, 0, Movetoworkspace 1, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bindd = $mainMod, S, Togglespecialworkspace, togglespecialworkspace, magic
-bindd = $mainMod SHIFT, S, Movetoworkspace, movetoworkspace, special:magic
+bindd = $mainMod, S, Toggle special workspace, togglespecialworkspace, magic
+bindd = $mainMod SHIFT, S, Move to workspace, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 # bind = $mainMod, mouse_down, workspace, e+1
@@ -109,16 +99,10 @@ bindd = $mainMod, M, E-Mail, exec, $email
 
 bindd = $mainMod, XF86HomePage, Start Joplin, exec, uwsm app -- joplin-desktop
 
-# bindd = $mainMod SHIFT, W, WhatsApp, exec, uwsm app -- firefox --new-window https://web.whatsapp.com
-# bindd = $mainMod SHIFT, W, WhatsApp, exec, uwsm app -- google-chrome-stable --user-data-dir=~/.config/google-chrome/Profile\ 1/ --new-window web.whatsapp.com
-# bindd = $mainMod SHIFT, W, WhatsApp, exec, uwsm app -- firefox --profile ~/.mozilla/firefox/68lq9zlo.whatsapp web.whatsapp.com
 bindd = $mainMod SHIFT, W, WhatsApp, exec, hypr25-whatsapp-app
 bindd = $mainMod SHIFT, G, Signal, exec, uwsm app -- signal-desktop
 
 # Switch sound output device
-# bind = CTRL ALT, L, exec, pactl set-default-sink alsa_output.pci-0000_00_1f.3.analog-stereo
-# bind = CTRL ALT, K, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
-
 # bindd = CTRL ALT, L, Switch audio out to speaker, exec, pactl set-default-sink alsa_output.pci-0000_14_00.6.analog-stereo
 # bindd = CTRL ALT, K, Switch audio out to headphone, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
 bindd = CTRL ALT, L, Switch audio sink, exec, hypr25-switch-audio-sink
@@ -134,6 +118,7 @@ binddm = $mainMod, mouse:273, Resize window with RMB, resizewindow
 # Laptop multimedia keys for volume and LCD brightness
 # bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 # bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+
 # Volume raise with custom value
 binddel = ,XF86AudioRaiseVolume, Volume up, exec, swayosd-client --output-volume 2
 # Volume lower with custom value
