--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -26,44 +26,10 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=,preferred,auto,auto
 monitor = , preferred, auto, 1
-monitor = eDP-1, 1920x1080, 0x0, 1
-monitor = DP-1, 1920x1080, 1920x0, 1
-
-###################
-### MY PROGRAMS ###
-###################
+# monitor = eDP-1, 1920x1080, 0x0, 1
+# monitor = DP-1, 1920x1080, 1920x0, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-
-
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-exec-once = [workspace 1 silent] uwsm app -- firefox
-exec-once = [workspace 2 silent] uwsm app -- kitty
-exec-once = [workspace 3 silent] uwsm app -- betterbird
-
-exec-once = [workspace special:keepassx silent] keepassxc
-
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-#exec-once = nm-applet
-
-# If Hyprland is started with uwsm, you can autostart the polkit agent with the command systemctl --user enable --now hyprpolkitagent.service.
-# exec-once = systemctl --user start hyprpolkitagent
-
-# exec-once = waybar & hyprpaper & swaync & nextcloud & hypridle
-# exec-once = waybar & hyprpaper & swaync & nextcloud & cryptomator
-# exec-once = uwsm app -- waybar & uwsm app -- hyprpaper & uwsm app -- swaync
-exec-once = uwsm app -- hyprpaper & uwsm app -- swaync & uwsm app -- swayosd-server
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 
 #####################
@@ -209,8 +175,8 @@ input {
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     # workspace_swipe = false
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
+    # workspace_swipe = true
+    # workspace_swipe_fingers = 3
 }
 
 # Example per-device config
@@ -246,4 +212,5 @@ windowrulev2 = workspace special:keepassx, class:^(org.keepassxc.KeePassXC)$
 # windowrulev2 = float,class:^(thunderbird)$,initialTitle:^(Verfassen: \(Kein Betreff\))$
 # windowrulev2 = float,class:^(eu.betterbird.Betterbird)$,initialTitle:^(Verfassen: \(Kein Betreff\))$
 
+source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/bindings.conf
