playing around with submap just for fun
- remove duplicate settings line

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -4,6 +4,7 @@
 #
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
+$resetSubMap = hyprctl dispatch submap reset
 
 # Set programs that you use
 $terminal = uwsm app -- kitty
@@ -22,7 +23,7 @@ bindd = $mainMod, E, File manager, exec, $fileManager
 # bind = $mainMod, R, exec, $menu
 bindd = $mainMod, SPACE, Launcher, exec, $menu
 bindd = $mainMod, P, Pseudo desktop, pseudo, # dwindle
-bindd = $mainMod, J, Toggle split, togglesplit, # dwindle
+# bindd = $mainMod, J, Toggle split, togglesplit, # dwindle
 bindd = $mainMod, L, Lock screen, exec, uwsm app -- hyprlock
 
 # Move focus with mainMod + arrow keys
@@ -147,3 +148,17 @@ binddl = , XF86AudioPlay, Pause/Play song, exec, mpc play
 binddl = , XF86AudioPrev, Play previouos song, exec, mpc prev
 
 bindd = $mainMod, K, Toggle special workspace keepassx, togglespecialworkspace, keepassx
+
+# Submap-Trigger
+# bind = $mainMod, Return, submap, launch
+# bind = $mainMod, d, submap, rofi
+bind = $mainMod SHIFT, N, submap, notify
+# bind = $mainMod SHIFT, S, submap, scripts
+
+submap = notify
+ bindel = , N, exec, swaync-client -t
+# bind = SHIFT , N, exec, makoctl dismiss --all
+# bind = , D, exec, makoctl dismiss -n
+# bind = , H, exec, makoctl history
+bind = , Escape, exec, $resetSubMap
+submap = reset
