set Adwaita-dark scheme for GTK and QT
- update READEME.md

--- a/hyprland/autostart.conf
+++ b/hyprland/autostart.conf
@@ -29,4 +29,13 @@ exec-once = uwsm app -- swayosd-server
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
-
+# Theme
+# More theming tips in README.md
+# GTK4
+exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+# GTK3
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3-dark"
+# Desktop Icons
+exec-once = gsettings set org.gnome.desktop.interface "Papirus-Dark"
+# Hyprland Cursor Theme
+exec-once = hyprctl setcursor Adwaita-dark 24
