set cursor theme 'default'
I don't like fancy cursors

--- a/hyprland/autostart.conf
+++ b/hyprland/autostart.conf
@@ -37,5 +37,7 @@ exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3-dark"
 # Desktop Icons
 exec-once = gsettings set org.gnome.desktop.interface "Papirus-Dark"
+# GTK cursor theme
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme "default"
 # Hyprland Cursor Theme
-exec-once = hyprctl setcursor Adwaita-dark 24
+exec-once = hyprctl setcursor default 24
