--- a/hyprland/autostart.conf
+++ b/hyprland/autostart.conf
@@ -6,6 +6,9 @@
 # Or execute your favorite apps at launch like this:
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
+exec-once = /usr/lib/xdg-desktop-portal-hyprland
+exec-once = /usr/lib/xdg-desktop-portal-gtk
+
 # exec-once = $terminal
 exec-once = [workspace 1 silent] uwsm app -- firefox
 exec-once = [workspace 2 silent] uwsm app -- kitty
