rofi: with some Adwaita colors
adwaita.rasi was a copie of android_notification.rasi

--- a/rofi/Makefile
+++ b/rofi/Makefile
@@ -1,7 +1,5 @@
 # Definiere die Zieldateien, die kopiert werden sollen
-FILES = catppuccin-default.rasi \
-				catppuccin-lavrent-mocha.rasi \
-				catppuccin-mocha.rasi \
+FILES = adwaita.rasi \
 				config.rasi
 
 # Definiere das Zielverzeichnis
