rofi: add adwaita-dark theme, add emoji picker

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -9,7 +9,8 @@ $resetSubMap = hyprctl dispatch submap reset
 # Set programs that you use
 $terminal = uwsm app -- kitty
 $fileManager = uwsm app -- nautilus --new-window
-$menu = uwsm app -- rofi -modes "drun" -show drun -run-command 'uwsm app -- {cmd}'
+# $menu = uwsm app -- rofi -modes "drun,run,windows" -show drun -run-command 'uwsm app -- {cmd}' -hover-select -me-select-entry '' -me-accept-entry MousePrimary
+$menu = rofi -show drun -run-command 'uwsm app -- {cmd}'
 $browser = uwsm app -- firefox
 $email = uwsm app -- betterbird
 
@@ -22,6 +23,7 @@ bindd = $mainMod, X, Power Menu, exec, wleave --show-keybinds --no-version-info
 bindd = $mainMod, E, File manager, exec, $fileManager
 # bind = $mainMod, R, exec, $menu
 bindd = $mainMod, SPACE, Launcher, exec, $menu
+bindd = $mainMod SHIFT, E, Emoji Picker, exec, rofi -show emoji
 bindd = $mainMod, P, Pseudo desktop, pseudo, # dwindle
 # bindd = $mainMod, J, Toggle split, togglesplit, # dwindle
 bindd = $mainMod, L, Lock screen, exec, uwsm app -- hyprlock
