--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -108,7 +108,7 @@ bindd = $mainMod SHIFT, G, Signal, exec, uwsm app -- signal-desktop
 # Switch sound output device
 # bindd = CTRL ALT, L, Switch audio out to speaker, exec, pactl set-default-sink alsa_output.pci-0000_14_00.6.analog-stereo
 # bindd = CTRL ALT, K, Switch audio out to headphone, exec, pactl set-default-sink alsa_output.usb-Sennheiser_Sennheiser_PC_8.2_USB_A002900200111439-00.analog-stereo
-bindd = CTRL ALT, L, Switch audio sink, exec, hypr25-switch-audio-sink
+bindd = CTRL ALT, L, Toggle audio sink, exec, hypr25-toggle-audio-sink
 
 # cliphist
 # bindd = $mainMod, V, Clipboard history, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
