--- a/bin/Makefile
+++ b/bin/Makefile
@@ -2,6 +2,7 @@ INSTALL = install
 DESTDIR = $${HOME}/.local/bin
 FILES = font-list \
 				hypr25-toggle-audio-sink \
+				hypr25-rofi-switch-audio-sink \
 				hypr25-whatsapp-app
 
 .PHONY: all install uninstall
