create $HOME/.local/bin if not exists

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -11,6 +11,12 @@ all:
 	@echo "Run 'make install' to install the hypr25 scripts."
 
 install:
+	@if [ -d $(DESTDIR) ]; then \
+		echo "Directory $(DESTDIR) exists."; \
+	else \
+		echo "Creating directory $(DESTDIR)..."; \
+		mkdir -p $(DESTDIR); \
+	fi
 	$(INSTALL) -v --compare -m 755 $(FILES) $(DESTDIR)
 	bash ../setup/prepare-hypr25-whatsapp-app.sh
 
