rename + rewrite whatsapp desktop icon

--- a/desktop/Makefile
+++ b/desktop/Makefile
@@ -1,5 +1,5 @@
 # Definiere die Zieldateien, die kopiert werden sollen
-DESKTOP_FILES = hypr25-firefox_whatsapp.desktop
+DESKTOP_FILES = whatsapp-web-hypr25.desktop
 ICONS = icons/WhatsApp.png
 
 # Definiere das Zielverzeichnis
@@ -16,13 +16,11 @@ all:
 # Regel für die Installation
 install: $(DESKTOP_DIR)
 	@echo "Kopiere Desktop-Dateien nach $(DESKTOP_DIR)..."
-	# @cp $(DESKTOP_FILES) $(DESKTOP_DIR)/
 	@$(INSTALL) -v --compare -m 644 $(DESKTOP_FILES) $(DESKTOP_DIR)
 	@echo "Kopiere Icons nach $(ICONS)"
 	@$(INSTALL) -v --compare -m 644 $(ICONS) $(ICONS_DIR)
 	@echo "Kopieren abgeschlossen. ✅"
-	#bash ../setup/prepare-whatsapp-desktop.sh
-	desktop-file-edit --set-icon=$(ICONS_DIR)/WhatsApp.png $(DESKTOP_DIR)/hypr25-firefox_whatsapp.desktop
+	desktop-file-edit --set-icon=$(ICONS_DIR)/WhatsApp.png $(DESKTOP_DIR)/whatsapp-web-hypr25.desktop
 
 # Regel zum Erstellen des Zielverzeichnisses, falls es nicht existiert
 $(DESKTOP_DIR):
