wleave, waybar, swayosd and swaync use ~/.local/share/hypr25/adwaita-dark.css

--- a/styles/Makefile
+++ b/styles/Makefile
@@ -1,29 +1,22 @@
 # Definiere die Zieldateien, die kopiert werden sollen
-FILES = style.css
+FILES = adwaita-dark.css
 
-# Setze CONFIG_HOME auf XDG_CONFIG_HOME, wenn gesetzt, oder auf $HOME/.config
-CONFIG_HOME := $(or $(XDG_CONFIG_HOME),$(HOME)/.config)
-
+# Definiere das Zielverzeichnis
 # Setze DATA_HOME auf XDG_DATA_HOME, wenn gesetzt, oder auf $HOME/.local/share
 DATA_HOME := $(or $(XDG_DATA_HOME),$(HOME)/.local/share)
 
-# Definiere das Zielverzeichnis
-TARGET_DIR = $(HOME)/.config/swayosd
+TARGET_DIR = $(DATA_HOME)/hypr25
 
 INSTALL = install
 
 .PHONY: all install uninstall
 
 all:
-	@echo "Run 'make install' to install the scripts."
+	@echo "Run 'make install' to install the style files."
 
 # Regel für die Installation
 install: $(TARGET_DIR)
-	if [ ! -f style.css ] || [ style.css -ot style_template.css ]; then \
-		cp style_template.css style.css; \
-		sed -i "s|DATA_HOME_PLACEHOLDER|$(DATA_HOME)|" style.css; \
-	fi
-	@echo "Kopiere Swayosd-Konfigurationsdateien nach $(TARGET_DIR)..."
+	@echo "Kopiere css-Dateien nach $(TARGET_DIR)..."
 	# @cp $(FILES) $(TARGET_DIR)/
 	@$(INSTALL) -v --compare -m 644 $(FILES) $(TARGET_DIR)
 	@echo "Installation abgeschlossen. ✅"
@@ -34,8 +27,8 @@ $(TARGET_DIR):
 
 # Regel zum Entfernen der kopierten Dateien
 uninstall:
-	@echo "Lösche Swayosd-Konfigurationsdateienn aus $(TARGET_DIR)..."
+	@echo "Lösche css-Dateien aus $(TARGET_DIR)..."
 	@rm -f $(addprefix $(TARGET_DIR)/, $(FILES))
-	@echo "Leere Verzeichnisse werden entfernt (falls leer)..."
+	@echo "Verzeichnisse werden entfernt (falls leer)..."
 	@rmdir --ignore-fail-on-non-empty $(TARGET_DIR)
 	@echo "Löschvorgang abgeschlossen. 🗑️"
