--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -48,8 +48,11 @@ general {
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     # #89b4fa = rgba(137,180,250,1),  #cba6f7 = rgba(203,166,247,1)
-    col.active_border = rgba(137,180,250,0.933) rgba(203,166,247,0.933) 45deg
-    col.inactive_border = rgba(595959aa)
+    # col.active_border = rgba(137,180,250,0.933) rgba(203,166,247,0.933) 45deg
+    col.active_border = rgba(53,132,228,0.933) rgba(145,65,172,0.933) 45deg
+    # col.active_border = rgba(53,132,228,0.933) rgba(237,91,0,0.933) 45deg
+    # col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(464650ff)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
